update bio, robots

--- a/bio.html
+++ b/bio.html
@@ -27,8 +27,7 @@
                     <br/>
                     - He is based in Brooklyn, New York.
                     <br/>
-                    - His music has been described as: alternative, psychedelic,
-                    rock, pop, indie, indietronica, ambient, idm, glitchy, vibey, groovy, hard, chill, soothing
+                    - His music has been described as: alternative, psychedelic, rock, pop, experimental, indie, indietronica, ambient, idm, glitchy, vibey, groovy, hard, chill, soothing
                 </p>
             </div>
 
