--- a/bio.html
+++ b/bio.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-F5P6ZFL86P"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-F5P6ZFL86P');
+    </script>
+
     <meta charset="UTF-8">
 
     <link rel="icon" type="image/png" href="favicon.ico">
     <link rel="stylesheet" href="./style.css">
-
-    <!-- Google Tag Manager -->
-    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-PGG33KK3');</script>
-    <!-- End Google Tag Manager -->
 
     <meta name="description" content='Official website for musician/artist Henry Behave. Listen to "The Perfect Answer", new psychdelic/alternative rock EP available now.''>
     <title>
