--- a/bio.html
+++ b/bio.html
@@ -49,7 +49,7 @@
                         <br/>
                         - He is a musician based in Brooklyn, NY.
                         <br/>
-                        - His music has been described as: alternative, psychedelic, rock, pop, experimental, indie, indietronica, ambient, idm, glitchy, vibey, groovy, hard, chill, soothing.
+                        - His music has been described as: alternative, psychedelic, rock, pop, experimental, indie, indietronica, ambient, idm, glitchy, vibey, groovy, hard, chill, soothing, dreamlike, cool, beautiful
                     </p>
                 </div>
             </div>
