add tiktok, update favicon

--- a/bio.html
+++ b/bio.html
@@ -31,12 +31,12 @@
         <div id="content">
             <!-- <h1>Henry Behave</h1> -->
             <div id="intro">
-                <!-- <a onclick="gtag('event', 'click', { 'event_category': 'link_click', 'value': 'index'})" href="/index.html">
+                <a onclick="gtag('event', 'click', { 'event_category': 'link_click', 'value': 'index'})" href="/index.html">
                     <img alt="Henry Behave logo" id="logo" src="logo-only-black.png" >
-                </a> -->
-                <p id="blurb">
+                </a>
+                <!-- <p id="blurb">
                     "The Perfect Answer" EP available now.
-                </p>
+                </p> -->
             </div>
 
             <div id="biography">
